--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Puppycat's Python Journey
+name: Pei's evolution into a python
 
 # Short bio or description (displayed in the header)
-description: I love spinach meow meow meow
+description: I've always dreamed of being a python
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/PIC16B/PIC16B.github.io/master/images/ucla-math.png
