Updated config.yml, about.md, added image and post
config.yml: changed description, avatar and footer link to repo
added test post
changed about me
added sinister image

--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Pei's evolution into a python
 
 # Short bio or description (displayed in the header)
-description: I've always dreamed of being a python
+description: Just a small town girl with python dreams
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/PIC16B/PIC16B.github.io/master/images/ucla-math.png
+avatar: https://play-lh.googleusercontent.com/Aj4S675fXRa9DudOcXT1WbeHscgI3-4HqUYI4OgMM_iMWnMuEpYc-MIgUIBaLtAidNc=w512
 
 #
 # Flags below are optional
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: HarlinLee/HarlinLee.github.io # replace with your repo
+  github: kwpexi/kwpexi.github.io # replace with your repo
   instagram:
   linkedin:
   pinterest:
